test/files/neg/t3691.check
t3691.scala:4: error: type mismatch;
<<<<<<< HEAD
 found   : java.lang.Object with Test.A[String]
=======
 found   : Object with Test.A[String]
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
 required: AnyRef{type A[x]}
 val b = (new A[String]{}): { type A[x] } // not ok
          ^
t3691.scala:5: error: type mismatch;
<<<<<<< HEAD
 found   : java.lang.Object with Test.A[String]
=======
 found   : Object with Test.A[String]
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
 required: AnyRef{type A}
 val c = (new A[String]{}): { type A } // not ok
          ^
t3691.scala:7: error: type mismatch;
<<<<<<< HEAD
 found   : java.lang.Object{type A = String}
=======
 found   : Object{type A = String}
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
 required: AnyRef{type A[X]}
 val x = (new { type A = String }): { type A[X] } // not ok
          ^
three errors found
